tests/models/struct/unnamed/i16/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2.0)]
    i16
);
fn main() {}
